# kolkhoz

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  analyze_pravda_results.py  docker-compose.yml  evaluate.py  extract.py  extract_tier1.py  extract_tier2.py  fetch.py  golden.py  golden_set.py  kolkhoz.py  main.py  models.py  opensanctions_csv.py  pyproject.toml  sample_golden.py  snapshot_url.py  snapshot_urls_from_csv.py  stage0_fetch.py  stage1_extract.py  stage2_extract.py  tier0_fetch.py  tier0_filter.py  tier1_extract.py  tier2_extract.py
.github/workflows/: build.yml
datasets/: hio_leadership.csv
fixtures/: about_page.json  board_roster.json  council_distractor.json  dual_role.json  executive_profile.json  image_roster.json  image_tall.json  large_roster.json  partial_leadership.json  screen_roster.json  screen_tall.json
fixtures/about_page/: expected.json  page.html
fixtures/board_roster/: expected.json  page.html
fixtures/council_distractor/: expected.json  page.html
fixtures/dual_role/: expected.json  page.html
fixtures/duplicate_name/: expected.json  page.html
fixtures/executive_profile/: expected.json  page.html
fixtures/image_roster/: expected.json  page.html
fixtures/image_tall/: expected.json  page.html
fixtures/large_roster/: expected.json  page.html
kolkhoz/: __init__.py  capture.py  cli.py  config.py  db.py  export.py  extract.py  models.py  pipeline.py  pravda.py  sources.py  utils.py
scripts/: analyze_pravda_results.py  snapshot_url.py  snapshot_urls.py  snapshot_urls_from_csv.py
(+11 files in other folders)
