[project]
name = "kolkhoz"
version = "0.1.0"
description = "Orchestrate web capture and LLM extraction of political position holders into structured data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]
