[project]
name = "kolkhoz"
version = "0.1.0"
description = "Orchestrate web capture and LLM extraction of political position holders into structured data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.1",
    "fsspec[gcs]>=2026.6.0",
    "openai>=2.41.1",
    "opensanctions-pravda>=0.1.3",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]

[project.scripts]
kolkhoz = "kolkhoz.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
